# hypermodern-python

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  pytype.cfg  requirements.txt
.github/: dependabot.yml
.github/workflows/: coverage.yml  release-drafter.yml  release.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.rst  requirements.txt  splines.rst
src/hypermodern_python/: __init__.py  app.py  console.py  splines.py  wikipedia.py
tests/: conftest.py  test_console.py  test_splines.py  test_wikipedia.py
